[feat] Configuração do sonar cloud